force-app/main/default/objects/cgcloud__Product_Condition__c/cgcloud__Product_Condition__c.object-meta.xml
<CustomObject>
    <description>Product specific conditons will be used for e.g. specifying product prices relevant for simple order value calculation</description>
    <label>Product Condition</label>
    <nameField>
        <displayFormat>PC-{0000}</displayFormat>
        <label>Condition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>