force-app/main/default/objects/cgcloud__Product_Condition__c/fields/cgcloud__Condition_Template__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Condition_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference to condition template.</description>
    <label>Condition Template</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>cgcloud__Condition_Template__c.cgcloud__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>cgcloud__Condition_Template__c.cgcloud__Product_Reference__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>cgcloud__Condition_Template__c.cgcloud__Customer_Reference__c</field>
            <operation>notEqual</operation>
            <value>True</value>
        </filterItems>
        <infoMessage>Only active and product relevant condition templates can be shown.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>cgcloud__Condition_Template__c</referenceTo>
    <relationshipLabel>Product Conditions</relationshipLabel>
    <relationshipName>Product_Conditions</relationshipName>
    <type>Lookup</type>
</CustomField>