force-app/main/default/objects/cgcloud__Product_Condition__c/fields/cgcloud__Price_List_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Price_List_Type__c</fullName>
    <description>Price list type for wholesaler or direct customer.</description>
    <inlineHelpText>For the Wholesaler choose WS1999, for the Direct Customer choose WS2000.</inlineHelpText>
    <label>Price List Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>WS1999</fullName>
                <default>true</default>
                <label>WS1999</label>
            </value>
            <value>
                <fullName>WS2000</fullName>
            </value>
            <value>
                <fullName>NotRelevant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>