force-app/main/default/objects/cgcloud__Product_Condition__c/fields/cgcloud__Price_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Price_Type__c</fullName>
    <description>Price type for factory or consumer.</description>
    <label>Price Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>factory</fullName>
                <default>true</default>
                <label>factory</label>
            </value>
            <value>
                <fullName>consumer</fullName>
            </value>
            <value>
                <fullName>NotRelevant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>