force-app/main/default/objects/cgcloud__Product_Condition__c/fields/cgcloud__Template_Description__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Template_Description__c</fullName>
    <description>Description of the condition template.</description>
    <formula>cgcloud__Condition_Template__r.cgcloud__Description__c</formula>
    <label>Template Description</label>
    <type>Text</type>
</CustomField>