force-app/main/default/objects/cgcloud__Product_Condition__c/fields/cgcloud__Valid_From__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Valid_From__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <description>The day when the Condition will become valid for the Product.</description>
    <inlineHelpText>The day when the Condition will become valid for the Product.</inlineHelpText>
    <label>Valid From</label>
    <type>Date</type>
</CustomField>