force-app/main/default/objects/cgcloud__Product_Condition__c/fields/cgcloud__Valid_Thru__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Valid_Thru__c</fullName>
    <defaultValue>DATE(2099,12,31)</defaultValue>
    <description>The last day when the Condition will be valid for the Product.</description>
    <inlineHelpText>The last day when the Condition will be valid for the Product.</inlineHelpText>
    <label>Valid Thru</label>
    <type>Date</type>
</CustomField>