force-app/main/default/objects/cgcloud__Product_Condition__c/fields/cgcloud__Value__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Value__c</fullName>
    <description>Value for the product condition.</description>
    <label>Value</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>